mob分享，我的模块

--- a/app/src/main/res/layout/dialog_selection_job_categories.xml
+++ b/app/src/main/res/layout/dialog_selection_job_categories.xml
@@ -13,41 +13,100 @@
         android:textSize="18dp"
         android:textColor="#2B2F33"/>
 
-    <RadioGroup
-        android:id="@+id/rgp"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp">
+        android:layout_height="match_parent">
 
-        <RadioButton
-            android:id="@+id/rb_A"
+        <RadioGroup
+            android:id="@+id/rgp"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:button="@null"
-            android:drawableRight="@android:drawable/btn_radio"
-            android:text="A类"
-            android:textSize="16dp"
-            android:textColor="#35393D"/>
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp">
 
-        <RadioButton
-            android:id="@+id/rb_B"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:button="@null"
-            android:drawableRight="@android:drawable/btn_radio"
-            android:text="B类"
-            android:textSize="16dp"
-            android:textColor="#35393D"/>
+            <RadioButton
+                android:id="@+id/rb_A"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:button="@null"
+                android:drawableRight="@drawable/selector_radiobutton_background"
+                android:text="A类"
+                android:textSize="16dp"
+                android:textColor="#35393D"/>
 
-        <RadioButton
-            android:id="@+id/rb_C"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:button="@null"
-            android:drawableRight="@android:drawable/btn_radio"
-            android:text="C类"
-            android:textSize="16dp"
-            android:textColor="#35393D"/>
-    </RadioGroup>
+            <RadioButton
+                android:id="@+id/rb_B"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:button="@null"
+                android:drawableRight="@drawable/selector_radiobutton_background"
+                android:text="B类"
+                android:textSize="16dp"
+                android:textColor="#35393D"/>
+
+            <RadioButton
+                android:id="@+id/rb_C"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:button="@null"
+                android:drawableRight="@drawable/selector_radiobutton_background"
+                android:text="C类"
+                android:textSize="16dp"
+                android:textColor="#35393D"/>
+
+            <RadioButton
+                android:id="@+id/rb_D"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:button="@null"
+                android:drawableRight="@drawable/selector_radiobutton_background"
+                android:text="C类"
+                android:textSize="16dp"
+                android:textColor="#35393D"/>
+        </RadioGroup>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="50dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_hint_A"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:gravity="center_vertical"
+                android:textColor="@color/colorContext"
+                android:text="紧急有重要"/>
+
+            <TextView
+                android:id="@+id/tv_hint_B"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:gravity="center_vertical"
+                android:textColor="@color/colorContext"
+                android:text="较重要"/>
+
+            <TextView
+                android:id="@+id/tv_hint_C"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:gravity="center_vertical"
+                android:textColor="@color/colorContext"
+                android:text="重要"/>
+
+            <TextView
+                android:id="@+id/tv_hint_D"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:gravity="center_vertical"
+                android:textColor="@color/colorContext"
+                android:text="次重要"/>
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
+
 
 </LinearLayout>
