--- a/app/src/main/res/layout/activity_department_employees_log_management_main.xml
+++ b/app/src/main/res/layout/activity_department_employees_log_management_main.xml
@@ -3,10 +3,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <com.wtcrmandroid.custompricing.TitleBar
         android:id="@+id/titlebar"
         android:layout_width="match_parent"
         android:layout_height="45dp" />
+
+    <ListView
+        android:id="@+id/lv_department"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ListView>
 
 
 </LinearLayout>
