--- a/app/src/main/res/layout/widget_title_bar.xml
+++ b/app/src/main/res/layout/widget_title_bar.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
-        android:paddingRight="10dp">
+        android:layout_marginRight="10dp">
 
         <TextView
             android:id="@+id/right_text"
