--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,9 @@
 
     <color name="pulltorefresh_bg">#BCBCBC</color>
 
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+
 
 
 </resources>
