--- a/app/src/main/res/layout/dialog_my_phonenumber.xml
+++ b/app/src/main/res/layout/dialog_my_phonenumber.xml
@@ -6,10 +6,10 @@
               android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp"
-        android:text="@string/myphone_number"
         android:textColor="@color/colorIconText"
         android:textSize="18sp"/>
 
@@ -21,8 +21,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:textSize="@dimen/Text36"
-        android:textColor="@color/colorIconText"
-        android:hint="请输入电话号码"/>
+        android:textColor="@color/colorIconText"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
