--- a/app/src/main/res/layout/activity_address_book_department.xml
+++ b/app/src/main/res/layout/activity_address_book_department.xml
@@ -1,28 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
+    android:background="#F5F7F7">
     <com.wtcrmandroid.custompricing.TitleBar
         android:id="@+id/titlebar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/titlebar_height" />
-
-    <com.wtcrmandroid.custompricing.TopChooseMenuBar
-        android:id="@+id/tcmb_bar"
-        android:layout_width="match_parent"
-        android:layout_height="44dp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#e9edf2" />
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" />
-
+        android:layout_height="wrap_content" />
 </LinearLayout>
