--- a/app/src/main/res/layout/activity_address_book_groups.xml
+++ b/app/src/main/res/layout/activity_address_book_groups.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <com.wtcrmandroid.custompricing.TitleBar
         android:id="@+id/titlebar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/titlebar_height" />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_view"
+
+    <ExpandableListView
+        android:id="@+id/elv_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:groupIndicator="@null"/>
 </LinearLayout>
